@@ -10,6 +10,7 @@ adminenumlistplugin 1.1 (Not yet released)
  * #10656: Prompt with a warning dialog when navigating away from a page
            with unsaved changes to an enum list.
  * #10690: Added a 'Revert changes' button.
+ * #10694: Apply changes button is disabled until a change has been made.
  
 adminenumlistplugin 1.0 (09-Nov-2009)
  Initial release
